--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,10 @@
+// queryDsl  추가하는 gradle 설정 1.
+buildscript {
+    ext {
+        queryDslVersion = "5.0.0"
+    }
+}
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.3'
@@ -31,8 +38,61 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.2'
+
+	testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    
+    // Querydsl 관련 설정2.
+    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
+
+    // sweagger ui
+    // https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'
+
+    annotationProcessor(
+
+            "jakarta.persistence:jakarta.persistence-api",
+
+            "jakarta.annotation:jakarta.annotation-api",
+
+            "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta")
+
+    implementation 'net.coobird:thumbnailator:0.4.16'
+
+    //implementation 'io.jsonwebtoken:jjwt-api:JJWT_RELEASE_VERSION'
+    //runtimeOnly 'io.jsonwebtoken:jjwt-impl:JJWT_RELEASE_VERSION'
+    //runtimeOnly 'io.jsonwebtoken:jjwt-jackson:JJWT_RELEASE_VERSION'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+// querydsl 설정3.
+sourceSets {
+    main {
+        java {
+            srcDirs = ["$projectDir/src/main/java",
+                       "$projectDir/build/generated/sources/annotationProcessor/java/main"]
+        }
+    }
+}
+
+task deleteBuild(type: Delete) {
+    delete "$projectDir/bin/generated-sources/annotations"
+}
+
+// compileJava전에  clean작업 해달라고하는것.
+// 3버전 전용이지 2버전 용이아니다.
+// compileJava.dependsOn('clean')
+// compileTestJava.dependsOn('clean')
+compileJava.dependsOn('deleteBuild', 'clean')
