--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
+#spring.datasource.url=jdbc:mysql://192.168.0.54/webdb?serverTimezone=Asia/Seoul
+#spring.datasource.url=jdbc:mysql://192.168.0.116/webdb?serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost/webdb?serverTimezone=Asia/Seoul
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=webuser
+spring.datasource.password=webuser
 
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+# org.hibernate.SQL=debug
+
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=C:\\webserver\\nginx-1.24.0\\html
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=10MB
+
+org.zerock.upload.path=C:\\webserver\\nginx-1.24.0\\html
+
+org.zerock.kakao.rest_key=071d01b9d7104c6c9277e10ed51b5180
+org.zerock.kakao.token_url=https://kauth.kakao.com/oauth/token
+org.zerock.kakao.redirect_uri=http://localhost:3000/member/kakao
+org.zerock.kakao.get_user=https://kapi.kakao.com/v2/user/me
+
+org.zerock.jwt.secret=0123456789012345678901234567890123456789
